# chat-checker-anon

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
chat_checker/: __main__.py  breakdown_identification_runner.py  rating_runner.py  simulation_runner.py
chat_checker/breakdown_detection/: breakdown_detection_prompts.py  breakdown_detector.py  breakdown_taxonomy.py
chat_checker/chatbot_connection/: chatbot_client_base.py  chatbot_client_woz_test.py
chat_checker/cli/: application.py
chat_checker/data/: mwoz_dialogue_ids.json
chat_checker/data_management/: chatbot_registry.py  storage_manager.py
chat_checker/dialogue_rating/: dialogue_rater.py  rating_dimensions.py  rating_prompts.py
chat_checker/models/: __init__.py  breakdowns.py  chatbot.py  dialogue.py  llm.py  rating.py  run.py  user_personas.py
chat_checker/persona_generation/: persona_gen_prompts.py  persona_generator.py
chat_checker/user_simulation/: autotod_multiwoz_simulator.py  prompt_components.py  simulator_woz_test.py  user_simulator_base.py
chat_checker/user_simulation/persona_simulator/: persona_simulator.py  persona_simulator_prompts.py
chat_checker/user_simulation/test_user_simulator/: test_user_simulator.py  test_user_simulator_prompts.py
chat_checker/utils/: llm_utils.py  misc_utils.py  prompt_utils.py
